# magnetic_calibration

./: CMakeLists.txt  README.md  package.xml
dataset/: test_set.txt
include/magnetic_calibration/: magnetic_calibration.h  magnetic_paving.h
src/: magnetic_calibration.cpp  magnetic_paving.cpp  main.cpp
